Change button label

--- a/gdzie-szukac-pracy-w-it/index.html
+++ b/gdzie-szukac-pracy-w-it/index.html
@@ -74,11 +74,10 @@
         href="https://www.youtube.com/channel/UCF4jzVCa2J45NXnNtf6XBoA?sub_confirmation=1"
         target="_blank"
       >
-        <p>Lista się przydała?</p>
         <p>
-          Kliknij tutaj, żeby subskrybować nasz kanał na YT i nie przegapić
-          nowych materiałów!
-        </p>
+          Już w weekend na naszym kanale pojawi się film, w którym pokażemy jak dodać śniego na stronie!</p>
+          <p>Kliknij tutaj, żeby subskrybować nasz kanał na YT i nie przegapić
+          nowych materiałów!</p>
       </a>
     </div>
     <script src="app.js"></script>
