--- a/prezenty/index.html
+++ b/prezenty/index.html
@@ -415,7 +415,7 @@
         href="https://www.youtube.com/channel/UCF4jzVCa2J45NXnNtf6XBoA?sub_confirmation=1"
         target="_blank"
       >
-        <p>Lista się przydała?</p>
+        <p>W mikołajkowy weekend na naszym kanale YT pojawi się film, w którym pokażemy jak dodać efekt śniegu na stronie!</p>
         <p>
           Kliknij tutaj, żeby subskrybować nasz kanał na YT i nie przegapić
           nowych materiałów!
