Open links in new tab

--- a/prezenty/index.html
+++ b/prezenty/index.html
@@ -42,7 +42,7 @@
       />
     </div>
     <header>
-      <a class="header__homepage-link" href="https://jakzaczacprogramowac.pl/">
+      <a target="_blank" class="header__homepage-link" href="https://jakzaczacprogramowac.pl/">
         <img src="../assets/logo-biale.png" alt="Strona główna" />
       </a>
       <h1>Programistyczne prezenty</h1>
@@ -53,9 +53,9 @@
           Jeśli chcecie podarować coś na mikołaja programiście lub programistce
           i brakuje Wam pomysłów, to przygotowaliśmy dla Was listę inspiracji!
           Powstała ona z pomocą
-          <a href="https://marvelous-thinker-6265.ck.page/089649cbc0"
+          <a target="_blank" href="https://marvelous-thinker-6265.ck.page/089649cbc0"
             >facebookwej społeczności</a
-          >- serdeczne dzięki za pomoc!
+          > - serdeczne dzięki za pomoc!
         </p>
 
         <p>
@@ -67,7 +67,7 @@
         <div class="row">
           <ul class="list">
             <li>
-              <a href="#sluchawki-bezprzewodowe">Słuchawki bezprzewodowe</a>
+              <a target="_blank" href="#sluchawki-bezprzewodowe">Słuchawki bezprzewodowe</a>
             </li>
             <li><a href="#rasberry-pi">Resberry Pi</a></li>
             <li><a href="#ozdoby">Ozdoba na biurko</a></li>
@@ -100,18 +100,18 @@
 
         <div class="list">
           <ul>
-            <li><a href="https://www.ceneo.pl/68587633">Bluedio TM 5.0</a></li>
-            <li><a href="https://www.ceneo.pl/79691302">Edifier W820</a></li>
+            <li><a target="_blank" href="https://www.ceneo.pl/68587633">Bluedio TM 5.0</a></li>
+            <li><a target="_blank" href="https://www.ceneo.pl/79691302">Edifier W820</a></li>
             <li>
-              <a href="https://www.ceneo.pl/74745369"
+              <a target="_blank" href="https://www.ceneo.pl/74745369"
                 >Fresh N Rebel Clam Storm</a
               >
             </li>
             <li>
-              <a href="https://www.ceneo.pl/69412183">Sony WH-1000XM3B</a>
+              <a target="_blank" href="https://www.ceneo.pl/69412183">Sony WH-1000XM3B</a>
             </li>
             <li>
-              <a href="https://www.ceneo.pl/98889093">Steelseries Arctis 9</a>
+              <a target="_blank" href="https://www.ceneo.pl/98889093">Steelseries Arctis 9</a>
             </li>
           </ul>
         </div>
@@ -137,19 +137,19 @@
         <div class="list">
           <ul>
             <li>
-              <a
+              <a target="_blank"
                 href="https://www.raspberrypi.org/products/compute-module-4/?variant=raspberry-pi-cm4001000&resellerType=home"
                 >Rasberry Pi 4</a
               >
             </li>
             <li>
-              <a
+              <a target="_blank"
                 href="https://www.raspberrypi.org/products/raspberry-pi-4-model-b/?resellerType=home"
                 >Rasberry Pi 4B</a
               >
             </li>
             <li>
-              <a
+              <a target="_blank"
                 href="https://www.raspberrypi.org/products/raspberry-pi-400/?resellerType=home"
                 >Rasberry Pi 400</a
               >
@@ -178,9 +178,9 @@
         <span>Przykładowe oferty:</span>
         <div class="list">
           <ul>
-            <li><a href="https://popvinyl.pl/">Figurki Pop</a></li>
+            <li><a target="_blank" href="https://popvinyl.pl/">Figurki Pop</a></li>
             <li>
-              <a
+              <a target="_blank"
                 href="https://www.ceneo.pl/Komputery;szukaj-stojak+na+s%c5%82uchawki"
                 >Stojak na słuchawki</a
               >
@@ -211,13 +211,13 @@
         <div class="list">
           <ul>
             <li>
-              <a
+              <a target="_blank"
                 href="https://allegro.pl/oferta/kaczka-kaczuszka-gumowa-kapieli-swiateczna-mikolaj-9757363702"
                 >Tradycyjna kaczka</a
               >
             </li>
             <li>
-              <a
+              <a target="_blank"
                 href="https://www.amsterdamduckstore.com/rubber-duck/gingerbread-rubber-duck/?fbclid=IwAR16lAG-kARZk80QLtjdOGzlFX9XCHdvl2OJKHPZDWleccYqf_FYoSgFMFg"
                 >Piernikowa kaczka</a
               >
@@ -244,12 +244,12 @@
         <div class="list">
           <ul>
             <li>
-              <a href="https://www.ceneo.pl/Tablety_graficzne;szukaj-wacom"
+              <a target="_blank" href="https://www.ceneo.pl/Tablety_graficzne;szukaj-wacom"
                 >Tablety Wacom</a
               >
             </li>
             <li>
-              <a href="https://www.ceneo.pl/Tablety_graficzne;szukaj-huion"
+              <a target="_blank" href="https://www.ceneo.pl/Tablety_graficzne;szukaj-huion"
                 >Tablety Huion</a
               >
             </li>
@@ -274,7 +274,7 @@
           <span>Przykładowe oferty:</span>
           <ul>
             <li>
-              <a href="https://www.ceneo.pl/Gry;szukaj-cyberpunk+2077"
+              <a target="_blank" href="https://www.ceneo.pl/Gry;szukaj-cyberpunk+2077"
                 >Cyberpunk 2077</a
               >
             </li>
@@ -298,13 +298,13 @@
           <span> Oczywiście, może to być książka związana z kodem...</span>
           <ul>
             <li>
-              <a href="https://www.ceneo.pl/40508779"
+              <a target="_blank" href="https://www.ceneo.pl/40508779"
                 >Zrozumieć programowanie</a
               >
             </li>
-            <li><a href="https://www.ceneo.pl/32574407">Czysty kod</a></li>
+            <li><a target="_blank" href="https://www.ceneo.pl/32574407">Czysty kod</a></li>
             <li>
-              <a href="https://www.ceneo.pl/49538704">Mistrz czystego kodu</a>
+              <a target="_blank" href="https://www.ceneo.pl/49538704">Mistrz czystego kodu</a>
             </li>
           </ul>
         </div>
@@ -315,7 +315,7 @@
           >
           <ul>
             <li>
-              <a
+              <a target="_blank"
                 href="https://www.amazon.com/Better-Stretching-Flexibility-Improved-Performance/dp/1250248213?fbclid=IwAR0UO1qGC5oJhRTr1_Zi-XWbeFwSE7faMfT_xyu0A9MuUZBj5R7LrMH3c6E"
                 >Better Stretching</a
               >
@@ -326,7 +326,7 @@
           <span>...dostać większą podwyżkę...</span>
           <ul>
             <li>
-              <a
+              <a target="_blank"
                 href="https://www.amazon.com/Never-Split-Difference-Negotiating-Depended-ebook/dp/B014DUR7L2/ref=sr_1_1?keywords=Never+Split+the+Difference%3A+Negotiating+As+If+Your+Life+Depended+On+It&qid=1606934452&s=books&sr=1-1"
                 >Never split the difference</a
               >
@@ -339,15 +339,15 @@
             branży IT?</span
           >
           <ul>
-            <li><a href="https://www.ceneo.pl/49663919">Sprint</a></li>
+            <li><a target="_blank" href="https://www.ceneo.pl/49663919">Sprint</a></li>
             <li>
-              <a
+              <a target="_blank"
                 href="https://www.amazon.com/Radical-Candor-Kim-Scott/dp/B01KTIEFEE"
                 >Radical Candor</a
               >
             </li>
             <li>
-              <a href="https://www.ceneo.pl/19611913">Pułapki myślenia</a>
+              <a target="_blank" href="https://www.ceneo.pl/19611913">Pułapki myślenia</a>
             </li>
           </ul>
         </div>
@@ -369,13 +369,13 @@
           <span>Przykładowe oferty:</span>
           <ul>
             <li>
-              <a
+              <a target="_blank"
                 href="https://www.lego.com/pl-pl/themes/mindstorms/learntoprogram"
                 >LEGO MINDSTORMS</a
               >
             </li>
             <li>
-              <a
+              <a target="_blank"
                 href="https://www.lego.com/pl-pl/product/boost-creative-toolbox-17101"
                 >LEGO BOOST (dla młodszych)</a
               >
@@ -400,7 +400,7 @@
           <span>Przykładowe oferty:</span>
           <ul>
             <li>
-              <a
+              <a target="_blank"
                 href="https://www.ceneo.pl/Kamery_internetowe;szukaj-kamera+interentowa"
                 >Kamery internetowe</a
               >
@@ -410,7 +410,7 @@
       </section>
     </main>
     <div class="bar-container">
-      <a
+      <a target="_blank"
         class="bar"
         href="https://www.youtube.com/channel/UCF4jzVCa2J45NXnNtf6XBoA?sub_confirmation=1"
         target="_blank"
