--- a/prezenty/index.html
+++ b/prezenty/index.html
@@ -3,16 +3,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       property="og:description"
-      content="Sprawdź najpopularniejsze portale z ofertami pracy w branży IT!"
+      content="Jeśli poszukujesz jakiegoś prezentu związanego z programowaniem - sprawdź naszą listę propozycji!"
     />
-    <meta property="og:image" content="https://i.ibb.co/jR4WPsj/gsp.png" />
+    <meta property="og:image" content="https://i.ibb.co/Z8CdwMw/prezenty.png"/>
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <title>Jaki prezent dla programisty lub programistki??</title>
+    <title>Jaki wybrać prezent dla programisty lub programistki?</title>
   </head>
   <body>
     <div class="bg">
@@ -53,7 +53,7 @@
           Jeśli chcecie podarować coś na mikołaja programiście lub programistce
           i brakuje Wam pomysłów, to przygotowaliśmy dla Was listę inspiracji!
           Powstała ona z pomocą
-          <a target="_blank" href="https://marvelous-thinker-6265.ck.page/089649cbc0"
+          <a target="_blank" href="https://www.facebook.com/groups/zaczynamy.programowac"
             >facebookwej społeczności</a
           > - serdeczne dzięki za pomoc!
         </p>
