--- a/index.html
+++ b/index.html
@@ -321,11 +321,11 @@
             <img class="move-h row__bg__waves-2" src="assets/fale.png" alt="" />
           </div>
         </div>
-        <h3>#19 - Zagraniczne oferty pracy dla programistów i programistek</h3>
+        <h3 id="main-video-title"></h3>
         <br>
-        <p class="main-video-description">Sprawdź portale z ofertami pracy w zagranicznych branżach IT!</p>
+        <p class="main-video-description" id="main-video-description"></p>
         <div class="main-video-container">
-          <iframe  src="https://www.youtube.com/embed/vj2_cmIVRTo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe id="main-video-iframe" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="epiosdes">
           
