Updated the newsletter link.

--- a/index.html
+++ b/index.html
@@ -173,31 +173,34 @@
 
           <p>
             Zapisz się na
-            <a
-              data-formkit-toggle="089649cbc0"
-              href="https://marvelous-thinker-6265.ck.page/089649cbc0"
-              >newsletter</a
-            >, aby regularnie otrzywać świeżą dawkę materiałów edukacyjnych.
-            Dzięki zapisaniu się poznasz również najważniejsze ogłoszenia i
-            plany dotyczące naszej inicjatywy!
+            <a href="https://jakzaczacprogramowac.pl">newsletter</a>, aby
+            regularnie otrzywać świeżą dawkę materiałów edukacyjnych. Dzięki
+            zapisaniu się poznasz również najważniejsze ogłoszenia i plany
+            dotyczące naszej inicjatywy!
           </p>
         </div>
         <div class="row row--img-right">
           <div class="row__bg">
-            <img class="move-v row__bg__button-1" src="assets/klawisz.png" alt="" />
+            <img
+              class="move-v row__bg__button-1"
+              src="assets/klawisz.png"
+              alt=""
+            />
           </div>
           <p>
-            Dołącz do 
+            Dołącz do
             <a
               href="https://www.facebook.com/groups/zaczynamy.programowac/"
               target="_blank"
               >społeczności na FB!</a
-            >. Będziemy dzielić się naszym doświadczeniem, wiedzą i ciekawymi linkami. Chcemy aby grupa stała się też miejscem, na którym bez obaw można zadać pytania, które nurtują chcących rozpocząć karierę w IT.
-          </p>  
+            >. Będziemy dzielić się naszym doświadczeniem, wiedzą i ciekawymi
+            linkami. Chcemy aby grupa stała się też miejscem, na którym bez obaw
+            można zadać pytania, które nurtują chcących rozpocząć karierę w IT.
+          </p>
           <div class="row__col">
             <img src="assets/people.png" alt="" />
             <h3>Grupa na Facebooku</h3>
-          </div>        
+          </div>
         </div>
       </section>
       <section>
@@ -288,10 +291,21 @@
       </section>
       <section>
         <h2>Gdzie szukać pracy w IT?</h2>
-        <h3><a href="https://jakZaczacProgramowac.pl/gdzie-szukac-pracy-w-it" target="_blank">Sprawdź listę portali z ofertami pracy dla specjalistów IT!</a></p>
-        <br>
+        <h3>
+          <a
+            href="https://jakZaczacProgramowac.pl/gdzie-szukac-pracy-w-it"
+            target="_blank"
+            >Sprawdź listę portali z ofertami pracy dla specjalistów IT!</a
+          >
+        </h3>
+        <br />
         <div class="main-video-container">
-          <iframe  src="https://www.youtube.com/embed/2-09cjbaS8Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe
+            src="https://www.youtube.com/embed/2-09cjbaS8Q"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
         </div>
       </section>
       <section>
@@ -322,22 +336,20 @@
           </div>
         </div>
         <h3 id="main-video-title"></h3>
-        <br>
+        <br />
         <p class="main-video-description" id="main-video-description"></p>
         <div class="main-video-container">
-          <iframe id="main-video-iframe" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe
+            id="main-video-iframe"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
         </div>
-        <div class="epiosdes">
-          
-        </div>
+        <div class="epiosdes"></div>
       </section>
     </main>
 
-    <script
-      async
-      data-uid="089649cbc0"
-      src="https://marvelous-thinker-6265.ck.page/089649cbc0/index.js"
-    ></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
@@ -348,9 +360,9 @@
       function gtag() {
         dataLayer.push(arguments);
       }
-      gtag('js', new Date());
+      gtag("js", new Date());
 
-      gtag('config', 'UA-172847126-1');
+      gtag("config", "UA-172847126-1");
     </script>
     <script src="app.js"></script>
   </body>
