--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
           <p>
             Zapisz się na
-            <a href="https://jakzaczacprogramowac.pl">newsletter</a>, aby
+            <a href="https://zaczynamyprogramowac.pl">newsletter</a>, aby
             regularnie otrzywać świeżą dawkę materiałów edukacyjnych. Dzięki
             zapisaniu się poznasz również najważniejsze ogłoszenia i plany
             dotyczące naszej inicjatywy!
