--- a/gdzie-szukac-pracy-w-it/index.html
+++ b/gdzie-szukac-pracy-w-it/index.html
@@ -75,7 +75,7 @@
         target="_blank"
       >
         <p>
-          Już w weekend na naszym kanale pojawi się film, w którym pokażemy jak dodać śniego na stronie!</p>
+          Lista się przydała?</p>
           <p>Kliknij tutaj, żeby subskrybować nasz kanał na YT i nie przegapić
           nowych materiałów!</p>
       </a>
