Add contact form

--- a/index.html
+++ b/index.html
@@ -289,8 +289,56 @@
           </p>
         </div>
       </section>
+      <section id="contact">
+        <h2>Skontaktuj się z nami!</h2>
+        <div class="row">
+          <div class="row__bg">
+            <img class="row__bg__dots-1" src="assets/kropki-male.png" alt="" />
+            <img
+              class="move-v row__bg__ring-4"
+              src="assets/pierscien.png"
+              alt=""
+            />
+            <img
+              class="move-h row__bg__ring-5"
+              src="assets/pierscien.png"
+              alt=""
+            />
+          </div>
+          <form action="https://formsubmit.io/send/filip.mamcarczyk@gmail.com" method="POST">
+            <label for="mail">Twój e-mail*</label>
+            <input id="mail" name="mail" type="mail" placeholder="Wpisz swój adres">
+
+            <label for="msg">Twoja wiadomość*</label>
+            <textarea name="msg" id="msg" rows="5" placeholder="Wpisz wiadomość"></textarea>
+
+            <input value="Submit" type="submit"></button>
+          </form>
+        </div>
+      </section>
+      
       <section>
         <h2>Gdzie szukać pracy w IT?</h2>
+        <div class="row">
+          <div class="row__bg">
+            <img
+              class="rotate-fast row__bg__circle-1"
+              src="assets/okrag.png"
+              alt=""
+            />
+            <img class="row__bg__dots-1" src="assets/kropki-male.png" alt="" />
+            <img
+              class="move-v row__bg__ring-4"
+              src="assets/pierscien.png"
+              alt=""
+            />
+            <img
+              class="move-h row__bg__ring-5"
+              src="assets/pierscien.png"
+              alt=""
+            />
+          </div>
+        </div>
         <h3>
           <a
             href="https://jakZaczacProgramowac.pl/gdzie-szukac-pracy-w-it"
@@ -308,6 +356,7 @@
           ></iframe>
         </div>
       </section>
+
       <section>
         <h2>Najnowsze filmy</h2>
         <div class="row">
