--- a/index.html
+++ b/index.html
@@ -312,11 +312,13 @@
             <label for="msg">Twoja wiadomość*</label>
             <textarea name="msg" id="msg" rows="5" placeholder="Wpisz wiadomość"></textarea>
 
+            <input name="_redirect" type="hidden" id="name" value="https://jakzaczacprogramowac.pl/dziekujemy">
+
             <input value="Submit" type="submit"></button>
           </form>
         </div>
       </section>
-      
+
       <section>
         <h2>Gdzie szukać pracy w IT?</h2>
         <div class="row">
