Add redirect to a contact form

--- a/dziekujemy/index.html
+++ b/dziekujemy/index.html
@@ -103,7 +103,7 @@
           </div>
           <p>
             
-            <a href="https://www.jakZaczacProgramowac.pl"
+            <a href="https://jakzaczacprogramowac.pl"
               >Wróć na jakZaczacProgramowac.pl</a
             >
           </p>
