--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
             <input name="_redirect" type="hidden" id="name" value="https://jakzaczacprogramowac.pl/dziekujemy">
 
-            <input value="Submit" type="submit"></button>
+            <input value="Wyślij" type="submit"></button>
           </form>
         </div>
       </section>
