Add contcat form

--- a/index.html
+++ b/index.html
@@ -305,17 +305,58 @@
               alt=""
             />
           </div>
-          <form action="https://formsubmit.io/send/filip.mamcarczyk@gmail.com" method="POST">
+
+
+
+
+
+
+
+
+
+          <form 
+          action="https://formsubmit.io/send/kontakt@jakzaczacprogramowac.pl" method="POST">
             <label for="mail">Twój e-mail*</label>
-            <input id="mail" name="mail" type="mail" placeholder="Wpisz swój adres">
+            <input 
+              id="mail" 
+              name="mail" 
+              type="mail" 
+              placeholder="Wpisz swój adres">
 
             <label for="msg">Twoja wiadomość*</label>
-            <textarea name="msg" id="msg" rows="5" placeholder="Wpisz wiadomość"></textarea>
-
-            <input name="_redirect" type="hidden" id="name" value="https://jakzaczacprogramowac.pl/dziekujemy">
+            <textarea 
+              id="msg" 
+              name="msg" 
+              rows="5" 
+              placeholder="Wpisz wiadomość"></textarea>
 
             <input value="Wyślij" type="submit"></button>
           </form>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         </div>
       </section>
 
