--- a/index.html
+++ b/index.html
@@ -330,6 +330,12 @@
               rows="5" 
               placeholder="Wpisz wiadomość"></textarea>
 
+              <input 
+                name="_redirect" 
+                type="hidden" 
+                id="name" 
+                value="https://jakzaczacprogramowac.pl/dziekujemy/">
+
             <input value="Wyślij" type="submit"></button>
           </form>
 
