--- a/index.html
+++ b/index.html
@@ -330,11 +330,13 @@
               rows="5" 
               placeholder="Wpisz wiadomość"></textarea>
 
-              <input 
-                name="_redirect" 
-                type="hidden" 
-                id="name" 
-                value="https://jakzaczacprogramowac.pl/dziekujemy/">
+            <input 
+              name="_redirect" 
+              type="hidden" 
+              id="name" 
+              value="https://jakzaczacprogramowac.pl/dziekujemy/">
+
+            <input name="_formsubmit_id" type="text" style="display:none">
 
             <input value="Wyślij" type="submit"></button>
           </form>
