--- a/prezenty/index.html
+++ b/prezenty/index.html
@@ -78,7 +78,7 @@
                 >Słuchawki bezprzewodowe</a
               >
             </li>
-            <li><a href="#rasberry-pi">Resberry Pi</a></li>
+            <li><a href="#rasberry-pi">Rasberry Pi</a></li>
             <li><a href="#ozdoby">Ozdoba na biurko</a></li>
             <li><a href="#kaczuszka">Kaczuszka!</a></li>
             <li><a href="#tablet">Tablet graficzny</a></li>
@@ -137,7 +137,7 @@
         </div>
       </section>
       <section id="rasberry-pi">
-        <h2>Resberry Pi</h2>
+        <h2>Rasberry Pi</h2>
         <div class="row text">
           <img
             src="https://www.raspberrypi.org/homepage-9df4b/static/12ae99edde8f71ea81f63002108727ef/43eee/a520cb22-9fe4-4b54-8b0f-32a569262d64_KIT%2BON%2BGREY.jpg"
