--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
             filmiku!
           </p>
         </div>
-        <div class="row">
+
+        <div id="newsletter" class="row">
           <div class="row__bg">
             <img
               class="move-h row__bg__dots-3"
@@ -148,61 +149,25 @@
               alt=""
             />
           </div>
-          <p>
-            Polub nasz
-            <a
-              target="_blank"
-              href="https://www.facebook.com/jakZaczacProgramowac"
-              >fanpage na Facebooku</a
-            >, weź udział w ankietach oraz dyskusjach. Dzięki temu będziesz mieć
-            jeszce większy wpływ na to, co znajdzie sie w następnych filmikach!
-          </p>
-          <div class="row__col">
-            <img src="assets/fb.png" alt="" />
-            <h3>Facebook</h3>
-          </div>
-        </div>
-        <div id="newsletter" class="row row--img-left">
-          <div class="row__bg">
-            <img class="move-h row__bg__waves-1" src="assets/fale.png" alt="" />
+          <div>
+            <p>
+              Zapisz się na newsletter, aby regularnie otrzymywać świeżą dawkę
+              materiałów edukacyjnych. Dzięki zapisaniu się poznasz również
+              najważniejsze ogłoszenia i plany dotyczące naszej inicjatywy!
+              <script
+                async
+                data-uid="3670d62944"
+                src="https://jzp.kit.com/3670d62944/index.js"
+              ></script>
+            </p>
           </div>
           <div class="row__col">
             <img src="assets/mail.svg" alt="" />
             <h3>Newsletter</h3>
           </div>
-
-          <p>
-            Zapisz się na
-            <a href="https://zaczynamyprogramowac.pl">newsletter</a>, aby
-            regularnie otrzywać świeżą dawkę materiałów edukacyjnych. Dzięki
-            zapisaniu się poznasz również najważniejsze ogłoszenia i plany
-            dotyczące naszej inicjatywy!
-          </p>
-        </div>
-        <div class="row row--img-right">
-          <div class="row__bg">
-            <img
-              class="move-v row__bg__button-1"
-              src="assets/klawisz.png"
-              alt=""
-            />
-          </div>
-          <p>
-            Dołącz do
-            <a
-              href="https://www.facebook.com/groups/zaczynamy.programowac/"
-              target="_blank"
-              >społeczności na FB!</a
-            >. Będziemy dzielić się naszym doświadczeniem, wiedzą i ciekawymi
-            linkami. Chcemy aby grupa stała się też miejscem, na którym bez obaw
-            można zadać pytania, które nurtują chcących rozpocząć karierę w IT.
-          </p>
-          <div class="row__col">
-            <img src="assets/people.png" alt="" />
-            <h3>Grupa na Facebooku</h3>
-          </div>
         </div>
       </section>
+
       <section>
         <h2>Ekipa</h2>
         <div class="row">
@@ -289,165 +254,6 @@
           </p>
         </div>
       </section>
-      <section id="contact">
-        <h2>Skontaktuj się z nami!</h2>
-        <div class="row">
-          <div class="row__bg">
-            <img class="row__bg__dots-1" src="assets/kropki-male.png" alt="" />
-            <img
-              class="move-v row__bg__ring-4"
-              src="assets/pierscien.png"
-              alt=""
-            />
-            <img
-              class="move-h row__bg__ring-5"
-              src="assets/pierscien.png"
-              alt=""
-            />
-          </div>
-
-
-
-
-
-
-
-
-
-          <form 
-          action="https://formsubmit.io/send/kontakt@jakzaczacprogramowac.pl" method="POST">
-            <label for="mail">Twój e-mail*</label>
-            <input 
-              id="mail" 
-              name="mail" 
-              type="mail" 
-              placeholder="Wpisz swój adres">
-
-            <label for="msg">Twoja wiadomość*</label>
-            <textarea 
-              id="msg" 
-              name="msg" 
-              rows="5" 
-              placeholder="Wpisz wiadomość"></textarea>
-
-            <input 
-              name="_redirect" 
-              type="hidden" 
-              id="name" 
-              value="https://jakzaczacprogramowac.pl/dziekujemy/">
-
-            <input name="_formsubmit_id" type="text" style="display:none">
-
-            <input value="Wyślij" type="submit"></button>
-          </form>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        </div>
-      </section>
-
-      <section>
-        <h2>Gdzie szukać pracy w IT?</h2>
-        <div class="row">
-          <div class="row__bg">
-            <img
-              class="rotate-fast row__bg__circle-1"
-              src="assets/okrag.png"
-              alt=""
-            />
-            <img class="row__bg__dots-1" src="assets/kropki-male.png" alt="" />
-            <img
-              class="move-v row__bg__ring-4"
-              src="assets/pierscien.png"
-              alt=""
-            />
-            <img
-              class="move-h row__bg__ring-5"
-              src="assets/pierscien.png"
-              alt=""
-            />
-          </div>
-        </div>
-        <h3>
-          <a
-            href="https://jakZaczacProgramowac.pl/gdzie-szukac-pracy-w-it"
-            target="_blank"
-            >Sprawdź listę portali z ofertami pracy dla specjalistów IT!</a
-          >
-        </h3>
-        <br />
-        <div class="main-video-container">
-          <iframe
-            src="https://www.youtube.com/embed/2-09cjbaS8Q"
-            frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </div>
-      </section>
-
-      <section>
-        <h2>Najnowsze filmy</h2>
-        <div class="row">
-          <div class="row__bg">
-            <img
-              class="move-v row__bg__zigzag-3"
-              src="assets/zygzak.png"
-              alt=""
-            />
-            <img
-              class="move-v row__bg__ring-9"
-              src="assets/pierscien.png"
-              alt=""
-            />
-            <img
-              class="move-h row__bg__button-3"
-              src="assets/klawisz.png"
-              alt=""
-            />
-            <img
-              class="move-h row__bg__dots-5"
-              src="assets/kropki-male.png"
-              alt=""
-            />
-            <img class="move-h row__bg__waves-2" src="assets/fale.png" alt="" />
-          </div>
-        </div>
-        <h3 id="main-video-title"></h3>
-        <br />
-        <p class="main-video-description" id="main-video-description"></p>
-        <div class="main-video-container">
-          <iframe
-            id="main-video-iframe"
-            frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </div>
-        <div class="epiosdes"></div>
-      </section>
     </main>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -464,6 +270,5 @@
 
       gtag("config", "UA-172847126-1");
     </script>
-    <script src="app.js"></script>
   </body>
 </html>
