--- a/dzieki/index.html
+++ b/dzieki/index.html
@@ -102,11 +102,8 @@
             />
           </div>
           <p>
-            Już niedługo rozpoczniemy wysyłanie mailiem darmowych materiałów do
-            nauki front-endu! W międzyczasie możesz pooglądać nasze materiały na
-            <a href="https://www.youtube.com/channel/UCF4jzVCa2J45NXnNtf6XBoA"
-              >Youtube!</a
-            >
+            Wejdź na swój email i potwierdź subskrypcję 🙏 Bez tego nie będziemy
+            mogli Ci wysyłać newsletterów!
           </p>
           <div class="row__col">
             <img class="about-us__logo" src="../assets/logo.jpg" alt="" />
@@ -114,13 +111,6 @@
         </div>
       </section>
     </main>
-
-    <script
-      async
-      data-uid="089649cbc0"
-      src="https://marvelous-thinker-6265.ck.page/089649cbc0/index.js"
-    ></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=UA-172847126-1"
@@ -130,9 +120,9 @@
       function gtag() {
         dataLayer.push(arguments);
       }
-      gtag('js', new Date());
+      gtag("js", new Date());
 
-      gtag('config', 'UA-172847126-1');
+      gtag("config", "UA-172847126-1");
     </script>
   </body>
 </html>
