--- a/dzieki/index.html
+++ b/dzieki/index.html
@@ -77,7 +77,7 @@
     </header>
     <main>
       <section>
-        <h2>Gotowe! 🎉</h2>
+        <h2>Dziękujemy za zaufanie!</h2>
         <div class="row">
           <div class="row__bg">
             <img
@@ -101,7 +101,10 @@
               alt=""
             />
           </div>
-          <p>Fajnie, że z nami jesteś!</p>
+          <p>
+            Wejdź na swój email i potwierdź subskrypcję 🙏 Bez tego nie będziemy
+            mogli Ci wysyłać newsletterów!
+          </p>
           <div class="row__col">
             <img class="about-us__logo" src="../assets/logo.jpg" alt="" />
           </div>
