Add newsletter subpage

--- a/newsletter/dzieki/index.html
+++ b/newsletter/dzieki/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Całoroczny plan nauki dla stawiających pierwsze kroki w programowaniu zawierający linki do darmowych źródeł nauki"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
@@ -18,27 +18,27 @@
   <body>
     <div class="background">
       <img
-        src="./img/button.png"
+        src="../img/button.png"
         alt=""
         class="background__img background__img--button"
       />
       <img
-        src="./img/dots.png"
+        src="../img/dots.png"
         alt=""
         class="background__img background__img--dots"
       />
 
       <img
-        src="./img/logo-question-mark.png"
+        src="../img/logo-question-mark.png"
         alt=""
         class="background__img background__img--logo"
       />
     </div>
     <div class="container">
       <div class="logo">
-        <img src="./img/logo-bg.png" alt="" class="logo__bg" />
+        <img src="../img/logo-bg.png" alt="" class="logo__bg" />
         <img
-          src="./img/logo-question-mark.png"
+          src="../img/logo-question-mark.png"
           alt=""
           class="logo__question-mark"
         />
@@ -57,14 +57,14 @@
           <ul class="people">
             <li class="person">
               <div class="person__img-container">
-                <img src="./img/kacper.png" alt="" class="person__img" />
+                <img src="../img/kacper.png" alt="" class="person__img" />
               </div>
               <span class="person__name">Kacper Sokołowski</span>
             </li>
             <li class="person">
               <div class="person__img-container">
                 <img
-                  src="./img/filip.png"
+                  src="../img/filip.png"
                   alt=""
                   class="person__img person__img--filip"
                 />
@@ -74,28 +74,11 @@
           </ul>
         </section>
         <section>
-          <p>To, co naprawdę przyspiesza karierę, dzieje się poza kodem.</p>
-
+          <p>Dziękujemy za zaufanie! 🎉</p>
           <p>
-            Dzięki temu newsletterowi dowiesz się więcej o tematach takich jak:
-            <strong>Product engineering</strong>,
-            <strong>Umiejętności miękkie</strong>,
-            <strong>Work-life balance</strong> i
-            <strong>efektywność pracy programisty.</strong>
+            Wejdź na swój email i potwierdź subskrypcję 🙏 Bez tego nie będziemy
+            mogli Ci wysyłać newsletterów!
           </p>
-
-          <p>
-            W czasach AI to właśnie one będą Ci pomagać przyspieszyć karierę i
-            dostać awans.
-          </p>
-
-          <div class="spacer" />
-
-          <script
-            async
-            data-uid="6695044978"
-            src="https://jzp.kit.com/6695044978/index.js"
-          ></script>
         </section>
       </main>
     </div>
